--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
         </dependency>
+        <!--langchain4j高级功能-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-spring-boot-starter</artifactId>
+        </dependency>
         <!-- 接入ollama -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
